# synclayer

./: .gitignore  README.md  install.sh  pyproject.toml
jsm/: __init__.py  activity.py  core.py  main.py  reports.py  tools.py
jsm/config/: __init__.py  settings.py
jsm/database/: __init__.py  db.py  models.py
jsm/providers/: __init__.py  accounts.py  base.py  opensubtitles.py
jsm/scanner/: __init__.py  ffprobe.py  filesystem.py  moviehash.py
jsm/subtitles/: cleaner.py  downloader.py  fileops.py  language.py  matcher.py  queue.py  synchronizer.py
jsm/tui/: app.py  app.tcss  browser.py  dashboard.py  details.py  dialogs.py  header.py  logscreen.py  messages.py  options.py  queue_view.py
tests/: conftest.py  test_accounts.py  test_activity.py  test_cli_reports.py  test_config.py  test_fileops.py  test_language.py  test_languages_default.py  test_matcher.py  test_moviehash.py  test_new_features.py  test_opensubtitles.py  test_queue_downloader.py  test_review_fixes.py  test_scanner.py  test_synchronizer.py  test_tools.py  test_tui.py  test_tui_markup.py
