[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jellyfin-subtitle-manager"
version = "0.1.0"
description = "Synclayer - interactive terminal subtitle maintenance manager for Jellyfin libraries"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "textual>=0.80",
    "httpx>=0.27",
    "guessit>=3.8",
]

[project.optional-dependencies]
sync = ["ffsubsync>=0.4.25"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
jsm = "jsm.main:main"

[tool.setuptools.packages.find]
include = ["jsm*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
