[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jellyfin-subtitle-manager"
version = "0.1.0"
description = "Synclayer - interactive terminal subtitle maintenance manager for Jellyfin libraries"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "textual>=0.80",
    "httpx>=0.27",
    "guessit>=3.8",
]

[project.optional-dependencies]
sync = ["ffsubsync>=0.4.25"]
clean = ["subscleaner>=1.5.0"]
all = ["ffsubsync>=0.4.25", "subscleaner>=1.5.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
jsm = "jsm.main:main"

[tool.setuptools.packages.find]
include = ["jsm*"]

# Ship non-Python resources (the Textual stylesheet) inside the package, so a
# plain `pip install .` into site-packages includes them - otherwise the TUI
# crashes at startup unable to read app.tcss.
[tool.setuptools.package-data]
jsm = ["tui/*.tcss"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
